fixed comments functionalities after unfolding the truncated comment list

--- a/askbot/media/style/style.less
+++ b/askbot/media/style/style.less
@@ -2781,8 +2781,8 @@ ul.js-related-tags li {
             }
         }
 
-        .edit {
-            padding-left:6px;
+        .js-edit {
+            padding-left: 6px;
         }
 
         .convert-comment {
